# obsidian-second-mind

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  arch-interactive.html  data-flow-map.html  design.md  pyproject.toml
.agent/workflows/: push.md
.ai-codex/: README.md  components.md  env.md  lib.md  routes.md  schema.md  security.md
.ai-codex/adr/: adr-001-backup-rclone-crypt.md
.ai-codex/specs/: spec-core-memory-tests.md  spec-inbox-auto-router.md  spec-mcp-server-refactor.md  spec-radar-telegram-alerts.md  spec-vault-cloud-backup.md
.github/workflows/: ci.yml
docs/: CURRENT_STATUS.md  ROADMAP_v0.4.0.md  SESSION_LOG.md  architecture.md
scripts/: add_wikilinks.sh  create_notion_hub.py  dev.nzt108.github-radar.plist  enrich_remaining.sh  enrich_vault.py  enrich_vault.sh  generate_html_maps.py  github_radar_cron.py  populate_vault.sh  scan_all_projects.py  sync_to_portfolio.py
src/obsidian_bridge/: __init__.py  architect.py  auto_radar.py  backup.py  cli.py  config.py  context_packer.py  dashboard_data.py  dashboard_server.py  fact_extractor.py  github_radar.py  graph.py  hooks.py  inbox_router.py  indexer.py  ingest.py  linter.py  mcp_server.py  models.py  parser.py  patterns.py  scout.py  telegram_bot.py  wakeup.py  watcher.py
src/obsidian_bridge/dashboard/: app.js  index.html  style.css
src/obsidian_bridge/mcp_tools/: capture.py  maintenance.py  memory.py  notes.py  radar.py  scout_tools.py  temporal.py
tests/: test_context_packer.py  test_github_radar.py  test_graph.py  test_hooks.py  test_inbox_router.py  test_scout.py
