[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-second-mind"
version = "0.3.0"
description = "Turn your Obsidian vault into a Second Mind for AI coding agents via MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "nzt108", email = "nzt108@users.noreply.github.com" },
]
keywords = ["obsidian", "mcp", "ai", "second-brain", "knowledge-base"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "python-frontmatter>=1.1.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "watchdog>=4.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
obsidian-bridge = "obsidian_bridge.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_bridge"]

[tool.ruff]
target-version = "py311"
line-length = 100
