[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-second-mind"
version = "1.1.0"
description = "Turn your Obsidian vault into a living Second Brain for AI coding agents via MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "nzt108", email = "nzt108@users.noreply.github.com" },
]
keywords = [
    "obsidian", "mcp", "ai", "second-brain", "knowledge-base",
    "knowledge-graph", "semantic-search", "model-context-protocol",
    "coding-assistant", "vault",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "python-frontmatter>=1.1.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "watchdog>=4.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
media = [
    "openai-whisper>=20231117",  # Voice transcription (local)
    # Tesseract OCR: install via `brew install tesseract tesseract-lang`
]

[project.urls]
Homepage = "https://github.com/nzt108-dev/obsidian-second-mind"
Repository = "https://github.com/nzt108-dev/obsidian-second-mind"
Issues = "https://github.com/nzt108-dev/obsidian-second-mind/issues"

[project.scripts]
obsidian-bridge = "obsidian_bridge.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_bridge"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
